<resources>
    <string name="app_name">InsectDetection</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">logout</string>
    <string name="hint_card_name">Card Name</string>
    <string name="comments_sections">Comments section</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="due_date">Due Date</string>
    <string name="select_members">Select Members</string>
    <string name="label_color">Label Color</string>
    <string name="update">UPDATE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="hello_home">hello_home</string>
    <string name="select_a_country">Select a Country</string>
    <string name="select_country">Select Country</string>
    <string name="slogan">One insect at a time.</string>
    <string name="google_map">Google map</string>
    <string name="know_your_location">Know your location</string>
    <string name="how_to_rate_this_app">How to rate this app?</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="submit">Submit</string>
    <string name="thank_you">Thank You</string>
    <string name="very_disappointing">Very Disappointing\n</string>
    <string name="thank_you_for_your_feedback">Thank You For Your Feedback\n</string>
    <string name="_0">0</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="select_district">Select District</string>
    <string name="detect_insect">Detect Insect</string>
    <string name="home">Home</string>
    <string name="publish_blog">Publish Blog</string>
    <string name="profile">Profile</string>
    <string name="select_color">Select Colors</string>
    <string name="members">Members\n</string>
    <string name="write_a_comment">Write a comment\n</string>
    <string name="todo">TODO\n</string>
    <string name="select_division">Select Division</string>
    <string name="image_contentDescription">image</string>
    <string name="dislike">Dislike</string>
    <string name="like">like</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="comments">Comments</string>
    <string name="user_name">User Name</string>
    <string name="timestamp">TimeStamp</string>
</resources>