<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_user_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/image_contentDescription"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_user_place_holder" />


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorGray"
            app:cardCornerRadius="8sp"
            app:cardElevation="0dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="0dp"
                >
                <TextView
                    android:id="@+id/Commented_userName"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/user_name"
                    android:textSize="24sp"
                    android:padding="4dp"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/User_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/like"
            android:src="@drawable/baseline_thumb_up_24" />

        <TextView
            android:id="@+id/like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textColor="@android:color/black"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/_0" />

        <ImageButton
            android:id="@+id/dislike_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_thumb_down_24"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/dislike" />

        <TextView
            android:id="@+id/dislike_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textColor="@android:color/black"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/_0" />

        <TextView
            android:id="@+id/comment_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/timestamp"
            android:gravity="end"
            />

    </LinearLayout>





</LinearLayout>
