<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".Register">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/register2"
        android:scaleType="centerCrop" />

    <!-- Login Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Login Text -->
        <TextView
            android:layout_width="wrap_content"
            android:paddingBottom="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textStyle="bold" />

        <!-- Email Field -->
        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#EAE0E0"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="8dp"
            android:textSize="25sp" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#EAE0E0"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:textSize="25sp" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:boxStrokeWidthFocused="0sp"
            app:boxStrokeWidth="0sp"
            android:hint="@string/select_country"
            android:id="@+id/inputLayout"
            android:layout_marginStart="25sp"
            android:layout_marginEnd="25sp"
            android:layout_centerInParent="true"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            >

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/inputTV"
                android:inputType="none"
                app:simpleItems="@array/options_list" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
    android:id="@+id/progressBar"
    android:visibility="gone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewId"
            />

        <Button
            android:id="@+id/idBtnPickDate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/date_of_birth"
            android:textAllCaps="false"
            android:textSize="22dp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Login Button with Icon -->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="62dp"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="22dp" />


        </LinearLayout>
        <TextView
            android:id="@+id/loginNow"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/click_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>
